--- a/.drone.yml
+++ b/.drone.yml
@@ -1,49 +1,66 @@
 workspace:
   base: /test
-  path: openeuropa-site
+  path: oe_corporate_blocks
 
 services:
   web:
     image: fpfis/httpd-php-dev:7.1
     environment:
-      - DOCUMENT_ROOT=/test/openeuropa-site
-      - COMPOSER_CACHE_DIR=/cache/composer
+      - DOCUMENT_ROOT=/test/oe_corporate_blocks
   mysql:
     image: percona/percona-server:5.6
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-  selenium:
-    image: selenium/standalone-chrome:3.11
-    environment:
-      - DISPLAY=:99
-      - SE_OPTS=-debug
 
 pipeline:
-  # Download all dependencies.
-  composer-install:
+  composer-install-lowest:
+    group: prepare
+    image: fpfis/httpd-php-dev:7.1
+    volumes:
+      - /cache:/cache
+    commands:
+      # @todo remove "composer install" step once the following issue is fixed.
+      # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
+      - composer install --ansi --no-suggest --no-progress
+      - composer update --prefer-lowest --prefer-stable --ansi --no-suggest --no-progress
+    when:
+      matrix:
+        COMPOSER_BOUNDARY: lowest
+
+  composer-install-highest:
     group: prepare
     image: fpfis/httpd-php-dev:7.1
     volumes:
       - /cache:/cache
     commands:
       - composer install --ansi --no-suggest --no-progress
+    when:
+      matrix:
+        COMPOSER_BOUNDARY: highest
 
-  # Install the drupal site.
   site-install:
     image: fpfis/httpd-php-dev:7.1
     commands:
       - ./vendor/bin/run drupal:site-install
 
-  # Run grumphp tests.
-  test-grumphp:
+  grumphp:
     group: test
     image: fpfis/httpd-php-dev:7.1
     commands:
       - ./vendor/bin/grumphp run
 
-  # Run behat tests.
-  test-behat:
+  phpunit:
+    group: test
+    image: fpfis/httpd-php-dev:7.1
+    commands:
+      - ./vendor/bin/phpunit
+
+  behat:
     group: test
     image: fpfis/httpd-php-dev:7.1
     commands:
       - ./vendor/bin/behat --strict
+
+matrix:
+  COMPOSER_BOUNDARY:
+    - lowest
