--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -6,6 +6,10 @@ default:
       contexts:
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\DrupalContext
+        - Drupal\Tests\oe_corporate_blocks\Behat\CorporateBlocksContext
+        - OpenEuropa\Behat\TransformationContext:
+            pages:
+               user: '/user'
   extensions:
     Drupal\MinkExtension:
       goutte: ~
@@ -17,5 +21,7 @@ default:
       api_driver: "drupal"
       drupal:
         drupal_root: "build"
+      region_map:
+        footer: "div.region-footer-fifth"
   formatters:
     progress: ~
