--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "drupal-composer/drupal-scaffold": "~2.2",
         "drupal/config_devel": "~1.2",
         "drupal/console": "~1.0",
-        "drupal/drupal-extension": "~4.0",
+        "drupal/drupal-extension": "~4.0.0@beta",
         "drush/drush": "~9.0@stable",
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "~1.0@beta",
@@ -23,8 +23,6 @@
         "phpunit/phpunit": "~6.0"
     },
     "scripts": {
-        "post-create-project-cmd": "./build-module.sh",
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
         "post-update-cmd": "./vendor/bin/run drupal:site-setup"
     },
