OPENEUROPA-1695: Rework of behat tests, add caching context and rename theme hook.

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -23,5 +23,6 @@ default:
         drupal_root: "${drupal.root}"
       region_map:
         footer: "div.region-footer-fifth"
+        header: "div.region-header"
   formatters:
     progress: ~
