--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -20,6 +20,7 @@ drupal:
     - "./vendor/bin/drush config-set node.settings use_admin_theme 1 -y"
     # Enable the modules.
     - "./vendor/bin/drush en config_devel -y"
+    - "./vendor/bin/drush en language -y"
     - "./vendor/bin/drush en oe_corporate_blocks -y"
     - "./vendor/bin/drush en oe_corporate_blocks_demo -y"
     - "./vendor/bin/drush cr"
