OPENEUROPA-1743: Add corporate blocks settings block on/admin/config.

--- a/oe_corporate_blocks.info.yml
+++ b/oe_corporate_blocks.info.yml
@@ -3,3 +3,4 @@ description: OpenEuropa Corporate Blocks.
 package: OpenEuropa
 type: module
 core: 8.x
+configure: oe_corporate_blocks.settings_index
