OPENEUROPA-1743: Add site switcher block plugin and test.

--- a/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
+++ b/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
@@ -1,3 +1,9 @@
 name: OpenEuropa Corporate blocks Demo
 core: 8.x
 type: module
+
+config_devel:
+  install:
+  - block.block.footer_block
+  - block.block.languageswitcher
+  - block.block.siteswitcherblock
