--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,20 @@
     },
     "require-dev": {
         "composer/installers": "~1.5",
-        "drupal-composer/drupal-scaffold": "~2.2",
+        "drupal-composer/drupal-scaffold": "~2.5.2",
         "drupal/config_devel": "~1.2",
         "drupal/console": "~1.0",
-        "drupal/drupal-extension": "~4.0.0@beta",
-        "drush/drush": "~9.0@stable",
+        "drupal/drupal-extension": "~4.0",
+        "drush/drush": "~9.0",
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "~1.0@beta",
         "openeuropa/drupal-core-require-dev": "^8.6",
-        "openeuropa/task-runner": "~1.0-beta5",
-        "phpunit/phpunit": "~6.0"
+        "openeuropa/task-runner": "~1.0@beta",
+        "phpunit/phpunit": "~6.0",
+        "symfony/dom-crawler": "~3.4"
     },
     "scripts": {
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
         "post-update-cmd": "./vendor/bin/run drupal:site-setup"
     },
