--- a/config/install/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/oe_corporate_blocks.data.site_switcher.yml
@@ -3,4 +3,4 @@ info_label: Policies, information and services
 info_href: "https://ec.europa.eu/info/index_en"
 political_label: Commission and its priorities
 political_href: "https://ec.europa.eu/commission/index_en"
-active: ~
+active: political
