--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,12 @@
         "composer/installers": "~1.5",
         "drupal-composer/drupal-scaffold": "~2.5.2",
         "drupal/config_devel": "~1.2",
-        "drupal/console": "~1.0",
         "drupal/drupal-extension": "~4.0",
         "drush/drush": "~9.0",
         "openeuropa/behat-transformation-context" : "~0.1",
-        "openeuropa/code-review": "~1.0@beta",
+        "openeuropa/code-review": "~1.0",
         "openeuropa/drupal-core-require-dev": "^8.6",
-        "openeuropa/task-runner": "~1.0@beta",
+        "openeuropa/task-runner": "~1.0-beta5",
         "phpunit/phpunit": "~6.0",
         "symfony/dom-crawler": "~3.4"
     },
