--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -6,7 +6,9 @@ default:
       contexts:
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\DrupalContext
-        - Drupal\Tests\oe_corporate_blocks\Behat\CorporateBlocksContext
+        - Drupal\Tests\oe_corporate_blocks\Behat\CorporateBlocksContext:
+            selectors:
+              site switcher active link: '.site-switcher a.active'
         - Drupal\DrupalExtension\Context\ConfigContext
         - OpenEuropa\Behat\TransformationContext:
             pages:
