--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/core": "^8.7",
-        "php": "^7.1"
+        "php": "^7.1",
+        "drupal/core": "^8.7"
     },
     "require-dev": {
         "composer/installers": "~1.5",
@@ -18,6 +18,7 @@
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "~1.0",
         "openeuropa/drupal-core-require-dev": "^8.7",
+        "openeuropa/oe_multilingual": "dev-OPENEUROPA-1922",
         "openeuropa/task-runner": "~1.0-beta5",
         "phpunit/phpunit": "~6.0",
         "symfony/dom-crawler": "~3.4"
