--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -21,8 +21,10 @@ drupal:
     # Enable the modules.
     - "./vendor/bin/drush en config_devel -y"
     - "./vendor/bin/drush en language -y"
+    - "./vendor/bin/drush en oe_multilingual -y"
     - "./vendor/bin/drush en oe_corporate_blocks -y"
     - "./vendor/bin/drush en oe_corporate_blocks_demo -y"
+    - "./vendor/bin/drush oe-multilingual:import-local-translations"
     - "./vendor/bin/drush cr"
   settings:
     settings:
