--- a/oe_corporate_blocks.info.yml
+++ b/oe_corporate_blocks.info.yml
@@ -6,4 +6,5 @@ core: 8.x
 configure: oe_corporate_blocks.settings_index
 
 'interface translation project': oe_corporate_blocks
-'interface translation server pattern': modules/custom/oe_corporate_blocks/translations/%project-%language.po
+# The path to the actual translations is defined in
+# oe_corporate_blocks_locale_translation_projects_alter().
