--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "~1.0",
         "openeuropa/drupal-core-require-dev": "^8.7",
-        "openeuropa/oe_multilingual": "dev-OPENEUROPA-1922",
+        "openeuropa/oe_multilingual": "dev-master",
         "openeuropa/task-runner": "~1.0-beta5",
         "phpunit/phpunit": "~6.0",
         "symfony/dom-crawler": "~3.4"
