OPENEUROPA-2340: Declare links for UI.

--- a/oe_corporate_blocks.links.menu.yml
+++ b/oe_corporate_blocks.links.menu.yml
@@ -5,3 +5,9 @@ oe_corporate_blocks.settings_index:
   description: 'Configure corporate blocks.'
   position: left
   weight: -10
+entity.footer_general_link.collection:
+  title: 'Footer link manager'
+  route_name: entity.footer_general_link.collection
+  description: 'List footer links'
+  parent: system.admin_structure
+  weight: 99
