--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -11,7 +11,8 @@ default:
         - OpenEuropa\Behat\TransformationContext:
             pages:
               login: "user/login"
-
+              footer links manager: 'admin/structure/footer-general-link'
+              footer social links manager: 'admin/structure/footer-social-link'
   extensions:
     Drupal\MinkExtension:
       goutte: ~
