--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -24,6 +24,7 @@ drupal:
     - "./vendor/bin/drush en oe_multilingual -y"
     - "./vendor/bin/drush en oe_corporate_blocks -y"
     - "./vendor/bin/drush en oe_corporate_blocks_demo -y"
+    - "./vendor/bin/drush en config_translation -y"
     - "./vendor/bin/drush oe-multilingual:import-local-translations"
     - "./vendor/bin/drush cr"
   settings:
