--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -1,16 +1,8 @@
 contact:
-  call_us:
-    href: 'tel:0080067891011'
-    label: '00 800 6 7 8 9 10 11'
-  use_other:
-    href: 'https://europa.eu/european-union/contact/call-us_en'
-    label: 'telephone options'
-  contact_form:
-    href: 'https://europa.eu/european-union/contact/write-to-us_en'
-    label: 'contact form'
-  meet_us:
-    href: 'https://europa.eu/european-union/contact/meet-us_en'
-    label: 'local EU office'
+  - 'Call us <a href="tel:0080067891011">00 800 6 7 8 9 10 11</a>'
+  - 'Use other <a href="https://europa.eu/european-union/contact/call-us_en">telephone options</a>'
+  - 'Write to us via our <a href="https://europa.eu/european-union/contact/write-to-us_en">contact form</a>'
+  - 'Meet us at a <a href="https://europa.eu/european-union/contact/meet-us_en">local EU office</a>'
 social_media:
   -
     label: 'Search for EU social media channels'
