--- a/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
+++ b/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
@@ -5,4 +5,5 @@ type: module
 config_devel:
   install:
   - block.block.footer_block
+  - block.block.eufooterblock
   - block.block.languageswitcher
