--- a/oe_corporate_blocks.links.action.yml
+++ b/oe_corporate_blocks.links.action.yml
@@ -1,11 +1,11 @@
-entity.footer_general_link.add_form:
-  route_name: entity.footer_general_link.add_form
-  title: 'Add footer general link'
+entity.footer_link_general.add_form:
+  route_name: entity.footer_link_general.add_form
+  title: 'Add Footer Link General'
   appears_on:
-    - entity.footer_general_link.collection
+    - entity.footer_link_general.collection
 
-entity.footer_sicial_link.add_form:
-  route_name: entity.footer_social_link.add_form
-  title: 'Add footer social link'
+entity.footer_link_social.add_form:
+  route_name: entity.footer_link_social.add_form
+  title: 'Add Footer Link Social'
   appears_on:
-    - entity.footer_social_link.collection
+    - entity.footer_link_social.collection
