--- a/oe_corporate_blocks.links.task.yml
+++ b/oe_corporate_blocks.links.task.yml
@@ -1,39 +1,39 @@
-entity.footer_general_link.collection:
+entity.footer_link_general.collection:
   title: 'Footer general links'
-  route_name: entity.footer_general_link.collection
-  base_route: entity.footer_general_link.collection
+  route_name: entity.footer_link_general.collection
+  base_route: entity.footer_link_general.collection
 
-entity.footer_general_link.view:
+entity.footer_link_general.view:
   title: 'Edit'
-  route_name: entity.footer_general_link.edit_form
-  base_route: entity.footer_general_link.edit_form
+  route_name: entity.footer_link_general.edit_form
+  base_route: entity.footer_link_general.edit_form
 
-entity.footer_general_link.edit_form:
+entity.footer_link_general.edit_form:
   title: 'Edit'
-  route_name: entity.footer_general_link.edit_form
-  parent_id: entity.footer_general_link.view
+  route_name: entity.footer_link_general.edit_form
+  parent_id: entity.footer_link_general.view
 
-entity.footer_general_link.config_translation_overview:
+entity.footer_link_general.config_translation_overview:
   title: 'Translate'
-  route_name: entity.footer_general_link.config_translation_overview
-  parent_id: entity.footer_general_link.edit_form
+  route_name: entity.footer_link_general.config_translation_overview
+  parent_id: entity.footer_link_general.edit_form
 
-entity.footer_social_link.collection:
+entity.footer_link_social.collection:
   title: 'Footer social links'
-  route_name: entity.footer_social_link.collection
-  base_route: entity.footer_general_link.collection
+  route_name: entity.footer_link_social.collection
+  base_route: entity.footer_link_general.collection
 
-entity.footer_social_link.view:
+entity.footer_link_social.view:
   title: 'Edit'
-  route_name: entity.footer_social_link.edit_form
-  base_route: entity.footer_social_link.edit_form
+  route_name: entity.footer_link_social.edit_form
+  base_route: entity.footer_link_social.edit_form
 
-entity.footer_social_link.edit_form:
+entity.footer_link_social.edit_form:
   title: 'Edit'
-  route_name: entity.footer_social_link.edit_form
-  parent_id: entity.footer_social_link.view
+  route_name: entity.footer_link_social.edit_form
+  parent_id: entity.footer_link_social.view
 
-entity.footer_social_link.config_translation_overview:
+entity.footer_link_social.config_translation_overview:
   title: 'Translate'
-  route_name: entity.footer_social_link.config_translation_overview
-  parent_id: entity.footer_social_link.edit_form
+  route_name: entity.footer_link_social.config_translation_overview
+  parent_id: entity.footer_link_social.edit_form
