--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -1,3 +1,4 @@
+langcode: en
 contact:
   - 'Call us <a href="tel:0080067891011">00 800 6 7 8 9 10 11</a>'
   - 'Use other <a href="https://europa.eu/european-union/contact/call-us_en">telephone options</a>'
