OPENEUROPA-2391: Fix demo block labels.

--- a/modules/oe_corporate_blocks_demo/config/install/block.block.ec_footer_block.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/block.block.ec_footer_block.yml
@@ -13,7 +13,7 @@ provider: null
 plugin: oe_corporate_blocks_ec_footer
 settings:
   id: oe_corporate_blocks_ec_footer
-  label: 'OpenEuropa Footer block'
+  label: 'European Commission demo footer block'
   provider: oe_corporate_blocks
   label_display: '0'
 visibility: {  }
