--- a/oe_corporate_blocks.links.menu.yml
+++ b/oe_corporate_blocks.links.menu.yml
@@ -9,6 +9,6 @@ oe_corporate_blocks.settings_index:
 entity.footer_link_general.collection:
   title: 'Footer links'
   route_name: entity.footer_link_general.collection
-  description: 'List of Footer links'
+  description: 'List of site specific footer links'
   parent: system.admin_config_system
   weight: 99
