--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ pipeline:
     group: prepare
     image: fpfis/httpd-php-ci:7.1
     volumes:
-      - /cache:/cache
+      - /cache/${DRONE_REPO_NAME}:/cache
     commands:
       # @todo remove "composer install" step once the following issue is fixed.
       # @link https://webgate.ec.europa.eu/CITnet/jira/browse/OPENEUROPA-1234
@@ -31,7 +31,7 @@ pipeline:
     group: prepare
     image: fpfis/httpd-php-ci:7.1
     volumes:
-      - /cache:/cache
+      - /cache/${DRONE_REPO_NAME}:/cache
     commands:
       - composer install --ansi --no-suggest --no-progress
     when:
