--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -8,7 +8,7 @@ default:
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\ConfigContext
         - Drupal\Tests\oe_corporate_blocks\Behat\CorporateBlocksContext
-        - Drupal\Tests\oe_corporate_blocks\Behat\DrupalContext
+        - Drupal\Tests\oe_corporate_blocks\Behat\FeatureContext
         - OpenEuropa\Behat\TransformationContext:
             pages:
               login: "user/login"
