--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "drupal/config_devel": "~1.2",
         "drupal/drupal-extension": "~4.0",
         "drush/drush": "~9.0",
+        "guzzlehttp/guzzle": "~6.3",
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "~1.0",
         "openeuropa/drupal-core-require-dev": "^8.7",
