--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -1,11 +1,12 @@
 langcode: en
+content_owner_details: 'This site is managed by the European Commission, Directorate-General for Communication (<a href="https://ec.europa.eu/info/departments/communication_en" class="ecl-link ecl-link--standalone">DG COMM</a>)'
 contact_title: 'Contact the EU'
 contact:
   - 'Call us <a href="tel:0080067891011">00 800 6 7 8 9 10 11</a>'
   - 'Use other <a href="https://europa.eu/european-union/contact/call-us_en">telephone options</a>'
   - 'Write to us via our <a href="https://europa.eu/european-union/contact/write-to-us_en">contact form</a>'
   - 'Meet us at a <a href="https://europa.eu/european-union/contact/meet-us_en">local EU office</a>'
-social_media_title: 'Find a social media account'
+social_media_title: 'Social media'
 social_media:
   -
     label: 'Search for EU social media channels'
@@ -48,22 +49,23 @@ institution_links:
   -
     label: 'European Data Protection Supervisor (EDPS)'
     href: 'https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en'
-other_links:
-  -
-    label: Sitemap
-    href: /european-union/abouteuropa/sitemap_en
+legal_links_title: Legal
+legal_links:
   -
     label: 'About this site'
-    href: /european-union/abouteuropa_en
+    href: 'https://europa.eu/european-union/abouteuropa_en'
   -
     label: 'Language policy'
-    href: /european-union/abouteuropa/language-policy_en
+    href: 'https://europa.eu/european-union/abouteuropa/language-policy_en'
   -
     label: 'Privacy policy'
-    href: /european-union/abouteuropa/privacy-policy_en
+    href: 'https://europa.eu/european-union/abouteuropa/privacy-policy_en'
   -
     label: 'Legal notice'
-    href: /european-union/abouteuropa/legal_notices_en
+    href: 'https://europa.eu/european-union/abouteuropa/legal_notices_en'
+  -
+    label: 'Brexit content disclaimer'
+    href: 'https://europa.eu/european-union/brexit-content-disclaimer_en'
   -
     label: Cookies
-    href: /european-union/abouteuropa/cookies_en
+    href: 'https://europa.eu/european-union/abouteuropa/cookies_en'
