--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -29,6 +29,7 @@ default:
       region_map:
         ec_footer: "div.block-oe-corporate-blocks-ec-footer"
         eu_footer: "div.block-oe-corporate-blocks-eu-footer"
+        eu_footer_bottom_title: "div.block-oe-corporate-blocks-eu-footer .footer__corporate-bottom--eu-title"
         header: "div.region-header"
       selectors:
         message_selector: ".messages"
