EWPP-129: Change config of contact section.

--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -2,11 +2,19 @@ langcode: en
 content_owner_details: 'This site is managed by the European Commission, Directorate-General for Communication (<a href="https://ec.europa.eu/info/departments/communication_en" class="ecl-link ecl-link--standalone">DG COMM</a>)'
 contact_title: 'Contact the EU'
 contact:
-  - 'Call us <a href="tel:0080067891011">00 800 6 7 8 9 10 11</a>'
-  - 'Use other <a href="https://europa.eu/european-union/contact/call-us_en">telephone options</a>'
-  - 'Write to us via our <a href="https://europa.eu/european-union/contact/write-to-us_en">contact form</a>'
-  - 'Meet us at a <a href="https://europa.eu/european-union/contact/meet-us_en">local EU office</a>'
-social_media_title: 'Social media'
+  -
+    href: 'tel:0080067891011'
+    label: 'Call us 00 800 6 7 8 9 10 11'
+  -
+    href: 'https://europa.eu/european-union/contact/call-us_en'
+    label: 'Use other telephone options'
+  -
+    href: 'https://europa.eu/european-union/contact/write-to-us_en'
+    label: 'Write to us via our contact form'
+  -
+    href: 'https://europa.eu/european-union/contact/meet-us_en'
+    label: 'Meet us at a local EU office'
+social_media_title: 'Find a social media account'
 social_media:
   -
     label: 'Search for EU social media channels'
