EWPP-129: Fix social media column title.

--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -14,7 +14,7 @@ contact:
   -
     href: 'https://europa.eu/european-union/contact/meet-us_en'
     label: 'Meet us at a local EU office'
-social_media_title: 'Find a social media account'
+social_media_title: 'Social media'
 social_media:
   -
     label: 'Search for EU social media channels'
