--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "drupal/core": "^8.7"
+        "drupal/core": "^8.7",
+        "easyrdf/easyrdf": "0.10.0-alpha.1 as 0.9.1",
+        "openeuropa/oe_corporate_site_info": "dev-master"
     },
     "require-dev": {
         "composer/installers": "~1.5",
