--- a/oe_corporate_blocks.info.yml
+++ b/oe_corporate_blocks.info.yml
@@ -5,6 +5,9 @@ type: module
 core: 8.x
 configure: oe_corporate_blocks.settings_index
 
+dependencies:
+  - oe_corporate_site_info:oe_corporate_site_info
+
 'interface translation project': oe_corporate_blocks
 # The path to the actual translations is defined in
 # oe_corporate_blocks_locale_translation_projects_alter().
