--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -10,6 +10,7 @@ default:
         - Drupal\DrupalExtension\Context\MessageContext
         - Drupal\Tests\oe_corporate_blocks\Behat\CorporateBlocksContext
         - Drupal\Tests\oe_corporate_blocks\Behat\FeatureContext
+        - Drupal\Tests\oe_corporate_site_info\Behat\CorporateSiteInformationContext
         - OpenEuropa\Behat\TransformationContext:
             pages:
               login: "user/login"
