--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": ">=7.2",
         "drupal/core": "^8.7",
         "easyrdf/easyrdf": "0.10.0-alpha.1 as 0.9.1",
-        "openeuropa/oe_corporate_site_info": "dev-master"
+        "openeuropa/oe_corporate_site_info": "dev-EWPP-129"
     },
     "require-dev": {
         "composer/installers": "~1.5",
@@ -44,7 +44,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Drupal\\Tests\\oe_corporate_blocks\\": "./tests/"
+            "Drupal\\Tests\\oe_corporate_blocks\\": "./tests/",
+            "Drupal\\Tests\\oe_corporate_site_info\\": "./build/modules/contrib/oe_corporate_site_info/tests/src/"
         }
     },
     "extra": {
