--- a/oe_corporate_blocks.info.yml
+++ b/oe_corporate_blocks.info.yml
@@ -5,6 +5,12 @@ type: module
 core: 8.x
 configure: oe_corporate_blocks.settings_index
 
+config_devel:
+  install:
+    - oe_corporate_blocks.footer_link.section.about_us
+    - oe_corporate_blocks.footer_link.section.contact_us
+    - oe_corporate_blocks.footer_link.section.related_sites
+
 'interface translation project': oe_corporate_blocks
 # The path to the actual translations is defined in
 # oe_corporate_blocks_locale_translation_projects_alter().
