EWPP-467: Hide section selects and pass entities key to section setting script.

--- a/oe_corporate_blocks.libraries.yml
+++ b/oe_corporate_blocks.libraries.yml
@@ -3,3 +3,4 @@ footer_link_general_list_builder:
     js/footer_link_general_list_builder.js: {}
   dependencies:
     - core/drupal.tabledrag
+    - core/drupalSettings
