EWPP-129: Rename site_name to corporate_site_link.

--- a/config/install/oe_corporate_blocks.ec_data.footer.yml
+++ b/config/install/oe_corporate_blocks.ec_data.footer.yml
@@ -1,5 +1,5 @@
 langcode: en
-site_name:
+corporate_site_link:
   href: 'https://ec.europa.eu/info/index_en'
   label: 'European Commission website'
 class_navigation:
