EWPP-468: Add sections to site_specific_footer.

--- a/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.contact.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.contact.yml
@@ -4,4 +4,5 @@ dependencies: {  }
 id: contact
 label: 'Custom Contact'
 url: 'https://ec.europa.eu/info/contact_en'
+section: contact_us
 weight: -10
