--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,14 @@ services:
       # For Mac users: sudo ifconfig en0 alias 10.254.254.254 255.255.255.0
       # For Linux users: sudo ip addr add 10.254.254.254/32 dev lo label lo:1
   mysql:
-    image: percona/percona-server:5.6
+    image: percona/percona-server:5.7
+    command: --innodb-log-file-size=1G --max_allowed_packet=1G --innodb-buffer-pool-size=512M --wait_timeout=3000 --net_write_timeout=3000 --log_error_verbosity=3
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
 #    ports:
 #      - 3306:3306
   sparql:
-    image: openeuropa/triple-store-dev:1.5.0
+    image: openeuropa/triple-store-dev
     environment:
       - SPARQL_UPDATE=true
       - DBA_PASSWORD=dba
