--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=7.2",
         "drupal/core": "^8.7",
-        "easyrdf/easyrdf": "0.10.0-alpha.1 as 0.9.1",
+        "easyrdf/easyrdf": "1.0.0 as 0.9.2",
         "openeuropa/oe_corporate_site_info": "dev-EWPP-109"
     },
     "require-dev": {
