--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,8 +8,8 @@
     <env name="SIMPLETEST_DB" value="mysql://${drupal.database.user}:${drupal.database.password}@${drupal.database.host}:${drupal.database.port}/${drupal.database.name}"/>
     <env name="MINK_DRIVER_ARGS_WEBDRIVER" value='["${selenium.browser}", null, "${selenium.host}:${selenium.port}/wd/hub"]'/>
   </php>
-  <testsuites name="OpenEuropa Corporate Blocks Tests">
-    <testsuite>
+  <testsuites>
+    <testsuite name="OpenEuropa Corporate Blocks Tests">
       <directory>./tests/</directory>
     </testsuite>
   </testsuites>
