--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
         "php": ">=7.3",
         "drupal/core": "^8.9 || ^9.1",
         "easyrdf/easyrdf": "1.0.0 as 0.9.1",
-        "openeuropa/oe_corporate_site_info": "dev-EWPP-1137"
+        "openeuropa/oe_corporate_site_info": "^1.0"
     },
     "require-dev": {
         "composer/installers": "^1.11",
         "drupal/core-composer-scaffold": "^8.9 || ^9.1",
-        "drupal/config_devel": "~1.2",
-        "drupal/drupal-extension": "~4.0",
+        "drupal/config_devel": "^1.2",
+        "drupal/drupal-extension": "^4.0",
         "drush/drush": "^10.3",
         "openeuropa/behat-transformation-context" : "~0.1",
-        "openeuropa/code-review": "~1.6",
+        "openeuropa/code-review": "^1.6",
         "openeuropa/drupal-core-require-dev": "^8.9 || ^9.1",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0",
         "openeuropa/oe_multilingual": "dev-master",
@@ -29,10 +29,6 @@
         "post-update-cmd": "./vendor/bin/run drupal:site-setup"
     },
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/openeuropa/multivalue_form_element"
-        },
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
