--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,33 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.3",
-        "drupal/core": "^8.9 || ^9.1",
-        "easyrdf/easyrdf": "1.0.0 as 0.9.1",
+        "php": ">=7.4",
+        "drupal/core": "^9.2",
         "openeuropa/oe_corporate_site_info": "^1.0"
     },
     "require-dev": {
+        "behat/behat": "^3.10",
         "composer/installers": "^1.11",
-        "drupal/core-composer-scaffold": "^8.9 || ^9.1",
+        "drupal/core-composer-scaffold": "^9.2",
+        "drupal/core-dev": "^9.2",
         "drupal/config_devel": "^1.2",
+        "drupal/ctools": "^3.7",
         "drupal/drupal-extension": "^4.0",
+        "drupal/token": "^1.10",
         "drush/drush": "^10.3",
+        "egulias/email-validator": "^2.1.22 || ^3.0",
         "openeuropa/behat-transformation-context" : "~0.1",
-        "openeuropa/code-review": "^1.6",
-        "openeuropa/drupal-core-require-dev": "^8.9 || ^9.1",
-        "openeuropa/task-runner-drupal-project-symlink": "^1.0",
-        "openeuropa/oe_multilingual": "^1.8",
+        "openeuropa/code-review": "^2.0",
+        "openeuropa/task-runner-drupal-project-symlink": "^1.0-beta5",
+        "openeuropa/oe_multilingual": "^1.10",
         "phpspec/prophecy-phpunit": "^1 || ^2"
     },
+    "_readme": [
+        "Explicit lower version requirement of ctools due to Drupal core 9.2 compatibility.",
+        "Explicit requirement for egulias/email-validator due to https://www.drupal.org/project/drupal/issues/3061074#comment-14300579. It can be removed when Drupal core 9.2 support is droppped.",
+        "Explicit requirement of token module due to PHP7.4 compatbility.",
+        "Explicit requirement of behat module due to PHP8 compatibility."
+    ],
     "scripts": {
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
         "post-update-cmd": "./vendor/bin/run drupal:site-setup"
@@ -61,6 +70,12 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "phpro/grumphp": true
+        }
     }
 }
