--- a/oe_corporate_blocks.info.yml
+++ b/oe_corporate_blocks.info.yml
@@ -2,7 +2,7 @@ name: OpenEuropa Corporate Blocks
 description: OpenEuropa Corporate Blocks.
 package: OpenEuropa
 type: module
-core_version_requirement: ^8.9 || ^9.1
+core_version_requirement: ^9.2
 configure: oe_corporate_blocks.settings_index
 
 dependencies:
