EWPP-2596: Update EPSO link in EU footer.

--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -64,7 +64,7 @@ institution_links:
     href: 'https://edpb.europa.eu/edpb_en'
   -
     label: 'European Personnel Selection Office'
-    href: 'https://epso.europa.eu/home_en'
+    href: 'https://epso.europa.eu/en'
   -
     label: 'Publications Office of the European Union'
     href: 'https://op.europa.eu/en/home'
