EWPP-2831: Add additional config option for links to limit visibility of link for specific ECL branding.

--- a/config/install/oe_corporate_blocks.ec_data.footer.yml
+++ b/config/install/oe_corporate_blocks.ec_data.footer.yml
@@ -59,6 +59,7 @@ service_navigation:
     href: 'https://ec.europa.eu/info/about-european-commission/contact_en'
     label: 'Contact the European Commission'
   -
+    branding: core
     href: 'https://commission.europa.eu/accessibility-statement_en'
     label: 'Accessibility'
   -
