EWPP-2827: Change https://ec.europa.eu/info/ to https://commission.europa.eu/.

--- a/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.contact.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.contact.yml
@@ -3,6 +3,6 @@ status: true
 dependencies: {  }
 id: contact
 label: 'Custom Contact'
-url: 'https://ec.europa.eu/info/contact_en'
+url: 'https://commission.europa.eu/contact_en'
 section: contact_us
 weight: -10
