--- a/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.legal_notice.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/oe_corporate_blocks.footer_link.general.legal_notice.yml
@@ -3,6 +3,6 @@ status: true
 dependencies: {  }
 id: legal_notice
 label: 'Custom Legal notice'
-url: 'https://ec.europa.eu/info/legal-notice_en'
+url: 'https://commission.europa.eu/legal-notice_en'
 section: about_us
 weight: -10
