OEL-2115: Update to Drupal 9.4.

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -18,7 +18,7 @@ default:
               footer social links manager: 'admin/config/footer_link_social'
   extensions:
     Drupal\MinkExtension:
-      goutte: ~
+      browserkit_http: ~
       selenium2: ~
       ajax_timeout: 10
       javascript_session: selenium2
