--- a/config/install/oe_corporate_blocks.ec_data.footer.yml
+++ b/config/install/oe_corporate_blocks.ec_data.footer.yml
@@ -71,8 +71,8 @@ service_navigation:
     label: 'Resources for partners'
 legal_navigation:
   -
-    href: 'https://commission.europa.eu/language-policy_en'
-    label: 'Language policy'
+    href: 'https://commission.europa.eu/languages-our-websites_en'
+    label: 'Languages on our websites'
   -
     href: 'https://commission.europa.eu/cookies_en'
     label: Cookies
