EWPP-3012: Move demo blocks to new theme.

--- a/modules/oe_corporate_blocks_demo/config/install/block.block.ec_footer_block.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/block.block.ec_footer_block.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - oe_corporate_blocks
   theme:
-    - bartik
+    - olivero
 id: ec_footer_block
-theme: bartik
+theme: olivero
 region: footer_fifth
 weight: 0
 provider: null
