--- a/modules/oe_corporate_blocks_demo/config/install/block.block.languageswitcher.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/block.block.languageswitcher.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - language
   theme:
-    - bartik
+    - olivero
 id: languageswitcher
-theme: bartik
+theme: olivero
 region: header
 weight: 0
 provider: null
