--- a/modules/oe_corporate_blocks_demo/config/install/block.block.eu_footer_block.yml
+++ b/modules/oe_corporate_blocks_demo/config/install/block.block.eu_footer_block.yml
@@ -7,7 +7,7 @@ dependencies:
     - olivero
 id: eu_footer_block
 theme: olivero
-region: footer_fifth
+region: footer_top
 weight: 1
 provider: null
 plugin: oe_corporate_blocks_eu_footer
