EWPP-4171: Update EDPS' href from EU footer.

--- a/config/install/oe_corporate_blocks.eu_data.footer.yml
+++ b/config/install/oe_corporate_blocks.eu_data.footer.yml
@@ -58,7 +58,7 @@ institution_links:
     href: 'https://www.ombudsman.europa.eu/en/home'
   -
     label: 'European Data Protection Supervisor (EDPS)'
-    href: 'https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en'
+    href: 'https://www.edps.europa.eu/_en'
   -
     label: 'European Data Protection Board'
     href: 'https://edpb.europa.eu/edpb_en'
